--- a/biodata.html
+++ b/biodata.html
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <td>Alamat:</td>
-      <td>perumahan nusatara permai</td>
+      <td>Perumahan Nusantara permai</td>
     </tr>
     <tr>
       <td>tempat tanggal lahir:</td>
